# RTv1-2

./: CMakeLists.txt  Makefile
includes/: rtv1.h  vectors.h
kernels/: raytrace_old_cl
sources/: camera.c  cl_init.c  coloring.c  init.c  main.c  render.c  vectors.c
